# jotlet

./: .dockerignore  .env.test  .flake8  .gitignore  .sourcery.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  biome.json  conftest.py  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  combine-prs.yml  combine.yml  django.yml  docker-image.yml
accounts/: adapter.py  admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_historicaluserprofile_options_and_more.py  0003_alter_historicaluserprofile_options_and_more.py  0004_alter_userprofile_managers_alter_userprofile_user.py  0005_alter_historicaluserprofile_options_and_more.py  0006_remove_historicaluserprofile_optin_newsletter_and_more.py  0007_alter_user_options_alter_user_table.py  0008_historicaluserprofile_boards_paginate_by_and_more.py  0009_remove_user_optin_newsletter_and_more.py  0010_alter_userprofile_options.py  0011_remove_historicaluserprofile_user_and_more.py  0012_alter_historicaluserprofile_history_id.py  0013_user_uuid_userprofile_uuid.py  0014_alter_user_uuid_alter_userprofile_uuid.py  0015_remove_historicaluserprofile_id_and_more.py  0016_rename_uuid_historicaluserprofile_id_and_more.py  0017_historicaluserprofile.py  0018_userprofile_accounts_us_created_c69f42_brin.py  0019_delete_historicaluserprofile.py  0020_alter_userprofile_boards_paginate_by_and_more.py  0021_user_uuid.py  0022_alter_userprofile_boards_paginate_by_and_more.py
accounts/templates/accounts/: lockout.html  profile.html  user_delete.html
accounts/tests/: factories.py  test_models.py  test_views.py
boards/: admin.py  apps.py  consumers.py  filters.py  forms.py  http.py  mixins.py  models.py  routing.py  signals.py  tasks.py  urls.py  utils.py  views.py
boards/management/commands/: generate_background_image_thumbnails.py  populate_moderator_perms.py  populate_scheduled_tasks.py  post_image_cleanup.py
boards/migrations/: 0001_initial.py  0002_alter_post_topic_alter_topic_board.py  0003_alter_post_topic_alter_topic_board.py  0004_board_uuid.py  0005_post_session_key.py  0006_alter_post_session_key.py  0007_board_owner.py  0008_alter_board_owner.py  0009_alter_post_options.py  0010_board_slug.py  0011_alter_board_options.py  0012_alter_post_options.py  0013_alter_post_options.py  0014_image_boardpreferences.py  0015_rename_photo_image_image.py  0016_boardpreferences_background_color_and_more.py  0017_rename_background_boardpreferences_background_image_and_more.py  0018_alter_boardpreferences_background_color_and_more.py  0019_alter_image_options_post_approved.py  0020_alter_post_approved.py  0021_alter_post_options.py  0022_alter_post_options.py  0023_alter_image_type.py  0024_boardpreferences_moderators.py  0025_boardpreferences_reaction_type_reaction.py  0026_alter_reaction_post.py  0027_alter_reaction_unique_together_post_user_and_more.py  0028_alter_post_user.py  0029_historicaltopic_historicalpost_historicalimage_and_more.py  0030_historicalboardpreferences.py  0031_add_postgres_extensions.py  0032_board_upper_title_idx_board_upper_description_idx_and_more.py  0033_userprofile_historicaluserprofile.py  0034_remove_userprofile_user_delete_historicaluserprofile_and_more.py  0035_alter_historicalboard_options_and_more.py  0036_alter_historicaltopic_subject_alter_topic_subject.py  0037_alter_historicaltopic_subject_alter_topic_subject.py  0038_remove_board_uuid_remove_historicalboard_uuid_and_more.py  0039_alter_historicalpost_content_alter_post_content.py  0040_rename_require_approval_boardpreferences_require_post_approval_and_more.py  (+39 more)
boards/static/css/: styles.css
boards/static/js/: base.js  board.js  index.js  post.js
boards/templates/: 403.html  404.html  base_generic.html  blank.html
boards/templates/boards/: board.html  board_confirm_delete.html  board_form.html  board_index.html  board_preferences.html  index.html  index_allboards.html  post_confirm_delete.html  post_form.html  post_reactions_confirm_delete.html  posts_confirm_approve.html  posts_confirm_delete.html  topic_confirm_delete.html  topic_form.html  topic_posts_confirm_delete.html
boards/templatetags/: board_extras.py  post_extras.py
boards/tests/: factories.py  test_consumers.py  test_filters.py  test_forms.py  test_management_commands.py  test_mixins.py  test_models.py  test_tasks.py  test_urls.py  test_utils.py  test_views.py  utils.py
boards/tests/views/: test_board.py  test_export.py  test_index.py  test_post.py  test_reaction.py  test_topic.py
boards/views/: __init__.py  board.py  export.py  index.py  post.py  reaction.py  topic.py
jotlet/: adapter.py  admin.py  asgi.py  context_processors.py  huey.py  middleware.py  mixins.py  models.py  settings.py  storage_backends.py  tasks.py  test_settings.py  urls.py  utils.py  views.py  wsgi.py
jotlet/mixins/: headers.py  refresh_from_db_invalidates_cached_properties.py
jotlet/static/css/: styles.css
jotlet/static/js/: base.js  color-mode-toggler.js
jotlet/templates/: 403.html  404.html  500.html  base_generic.html  blank.html  privacy_policy.html  privacy_policy_content.dist.html  robots.txt  terms.html  terms_content.dist.html
jotlet/templates/components/: footer.html  messages.html
jotlet/tests/: factories.py  test_mixins.py  test_templates.py  test_urls.py  test_utils.py  utils.py
maintenance/: tasks.py
notices/: middleware.py  urls.py  views.py
templates/account/: email_confirm.html  login.html  password_change.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  verification_sent.html
templates/registration/: logged_out.html  login.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
templates/socialaccount/: login.html
templates/socialaccount/snippets/: provider_list.html
(+57 files in other folders)
