[tool.coverage.run]
omit = "*/tests/*"
plugins = ["django_coverage_plugin"]

[tool.django-stubs]
django_settings_module = "jotlet.settings"

[tool.djlint]
custom_blocks = "element,slot,setvar"
format_attribute_template_tags = true
format_css = false
format_js = false
ignore = "H016"
max_line_length = 118
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.mypy]
disable_error_code = ["attr-defined"]
exclude = ["migrations"]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "allauth.*",
    "axes.*",
    "cacheops.*",
    "channels.*",
    "crispy_bootstrap5.*",
    "crispy_forms.*",
    "debug_toolbar",
    "django_cleanup.*",
    "django_redis",
    "environ",
    "huey_monitor.*",
    "pytest_lazy_fixtures.*",
    "sorl.*",
    "storages.backends.*",
    "tree_queries.*",
]

[project]
name = "jotlet"
version = "1.14.3"
requires-python = ">=3.12"
description = ""
license = "GPL-3.0-or-later"
readme = "README.md"
dependencies = [
    "boto3>=1.34.128,<2.0.0",
    "channels>=4.1.0,<5.0.0",
    "channels-redis>=4.2.0,<5.0.0",
    "crispy-bootstrap5>=2024.2",
    "Django[argon2]>=5.0.8,<6.0.0",
    "django-allauth[socialaccount]>=0.63.3,<0.64.0",
    "django-anymail[mailgun,sendgrid]>=10.3,<11.0",
    "django-auto-prefetch>=1.8.0,<2.0.0",
    "django-axes[ipware]>=6.5.0,<7.0.0",
    "django-cacheops>=7.0.2,<8.0.0",
    "django-cleanup>=8.1.0,<9.0.0",
    "django-cors-headers>=4.3.1,<5.0.0",
    "django-csp>=3.8,<4.0",
    "django-environ>=0.11.2,<0.12.0",
    "django-filter>=24.2,<25.0",
    "django-htmx>=1.17.3,<2.0.0",
    "django-huey-email-backend>=0.1.1,<0.2.0",
    "django-huey-monitor>=0.9.0,<0.10.0",
    "django-redis>=5.4.0,<6.0.0",
    "django-storages>=1.14.3,<2.0.0",
    "django-tree-queries>=0.19.0,<0.20.0",
    "gunicorn>=22.0.0,<23.0.0",
    "httpx>=0.27.0,<0.28.0",
    "huey>=2.5.1,<3.0.0",
    "Pillow>=10.3.0,<11.0.0",
    "psycopg[binary]>=3.1.19,<4.0.0",
    "redis[hiredis]>=5.0.6,<6.0.0",
    "sentry-sdk>=2.5.1,<3.0.0",
    "sorl-thumbnail>=12.10.0,<13.0.0",
    "tomli>=2.0.1,<3.0.0",
    "uvicorn[standard]>=0.30.1,<0.31.0",
    "uvicorn-worker>=0.2.0,<0.3.0",
    "whitenoise[brotli]>=6.6.0,<7.0.0",
]

[tool.uv]
dev-dependencies = [
    "coverage[toml]>=7.5.3,<8.0.0",
    "django-coverage-plugin>=3.1.0,<4.0.0",
    "django-debug-toolbar>=4.4.2,<5.0.0",
    "django-debug-toolbar-template-profiler>=2.1.0,<3.0.0",
    "django-filter-stubs>=0.1.3,<0.2.0",
    "django-stubs[compatible-mypy]>=5.0.2,<6.0.0",
    "djlint>=1.34.1,<2.0.0",
    "huey-stubs>=0.0.2,<0.1.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.4.8,<0.5.0",
    "types-factory-boy>=0.4.1,<0.5.0",
    "types-pillow>=10.2.0.20240520,<11.0.0",
]


[tool.poetry]
name = "jotlet"
version = "1.14.2"
description = ""
authors = ["Oscar Siles Brügge <siles.oscar@gmail.com>"]
package-mode = false

[project.optional-dependencies]
test = [
    "daphne==4.1.2",
    "factory-boy==3.3.0",
    "freezegun==1.5.1",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.5",
    "pytest-django==4.8.0",
    "pytest-factoryboy==2.7.0",
    "pytest-lazy-fixtures==1.0.7",
    "pytest-sugar==1.0.0",
    "pytest-xdist==3.6.1",
]


[tool.pyright]
ignore = ["*"]

[tool.pytest.ini_options]
addopts = "--cov=jotlet --cov-report xml:cov.xml --cov-report html:htmlcov"
asyncio_mode = "auto"

[tool.ruff]
exclude = ["manage.py", "**/migrations/*.py"]
line-length = 118
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "EXE",
    "T10",
    "TD",
    "TRIO",
    # Individual Rules
    "ARG002",
    "ARG003",
    "COM812",
    "COM819",
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "RUF012",
    "FIX002",
    "TRY003",
    "W191",
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.flake8-self]
ignore-names = ["_meta"]

[tool.ruff.lint.per-file-ignores]
"**/management/commands/*.py" = ["A003"]
"**/models.py" = ["A003"]
"**/signals.py" = ["ARG001"]
"**/tests/*.py" = ["PLR0913", "S101", "SLF001"]
